Revisão de arquivos
Revisado variaveis de app.py e var.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ __pycache__/var.cpython-310.pyc
 __pycache__/segredos.cpython-310.pyc
 img/LOGO HORIZONTAL_NOVO.png
 sandbox.py
+.idea/vcs.xml
+.idea/PLWHelper.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
